Add proto descriptor files to testdata.

--- a/testdata/stu3/BUILD
+++ b/testdata/stu3/BUILD
@@ -27,6 +27,7 @@ filegroup(
     name = "structure_definitions",
     srcs = glob([
         "structure_definitions/*.profile.json",
+        "structure_definitions/*.descriptor.prototxt",
     ]),
 )
 
