--- a/proto/stu3/BUILD
+++ b/proto/stu3/BUILD
@@ -3,40 +3,6 @@ package(default_visibility = ["//visibility:public"])
 licenses(["notice"])
 
 proto_library(
-    name = "datatypes",
-    srcs = [
-        "annotations.proto",
-        "codes.proto",
-        "datatypes.proto",
-    ],
-    deps = [
-        "@com_google_protobuf//:descriptor_proto",
-    ],
-)
-
-java_proto_library(
-    name = "datatypes_java_proto",
-    strict_deps = 0,
-    deps = [":datatypes"],
-)
-
-proto_library(
-    name = "resources_proto",
-    srcs = [
-        "resources.proto",
-    ],
-    deps = [
-        ":datatypes",
-    ],
-)
-
-java_proto_library(
-    name = "resources_java_proto",
-    strict_deps = 0,
-    deps = [":resources_proto"],
-)
-
-proto_library(
     name = "extensions",
     srcs = [
         "base64_separator_stride.proto",
@@ -45,14 +11,61 @@ proto_library(
         "structuredefinition_explicit_type_name.proto",
     ],
     deps = [
+        ":annotations",
         ":datatypes",
     ],
 )
 
 java_proto_library(
     name = "extensions_java_proto",
-    strict_deps = 0,
     deps = [":extensions"],
+)
+
+proto_library(
+    name = "datatypes",
+    srcs = [
+        "codes.proto",
+        "datatypes.proto",
+    ],
+    deps = [
+        ":annotations",
+    ],
+)
+
+java_proto_library(
+    name = "datatypes_java_proto",
+    deps = [":datatypes"],
+)
+
+proto_library(
+    name = "annotations",
+    srcs = [
+        "annotations.proto",
+    ],
+    deps = [
+        "@com_google_protobuf//:descriptor_proto",
+    ],
+)
+
+java_proto_library(
+    name = "annotations_java_proto",
+    deps = [":annotations"],
+)
+
+proto_library(
+    name = "resources_proto",
+    srcs = [
+        "resources.proto",
+    ],
+    deps = [
+        ":annotations",
+        ":datatypes",
+    ],
+)
+
+java_proto_library(
+    name = "resources_java_proto",
+    deps = [":resources_proto"],
 )
 
 # We also make the .proto files readable for testing.
