Split datatypes.proto into two.
The original file contains the primitive types (and profiles
extending them), as well as the complex types used by Extension.
Most other types move to metadatatypes.proto; these are rarely
used directly by applications.

Codes that are only used by the metadata types are moved to codes.proto.

Update scripts to autogenerate these files.

--- a/java/BUILD
+++ b/java/BUILD
@@ -10,8 +10,10 @@ java_library(
         "//external:gson",
         "//external:guava",
         "//proto/stu3:annotations_java_proto",
+        "//proto/stu3:codes_java_proto",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:extensions_java_proto",
+        "//proto/stu3:metadatatypes_java_proto",
         "//proto/stu3:resources_java_proto",
         "@com_google_protobuf//:descriptor_proto",
         "@com_google_protobuf//:protobuf_java",
@@ -183,6 +185,9 @@ java_test(
         "//external:guava",
         "//external:junit",
         "//external:truth",
+        "//proto/stu3:annotations_java_proto",
+        "//proto/stu3:datatypes_java_proto",
+        "//proto/stu3:metadatatypes_java_proto",
         "//proto/stu3:resources_java_proto",
         "@com_google_protobuf//:descriptor_proto",
         "@com_google_protobuf//:protobuf_java",
