--- a/proto/stu3/BUILD
+++ b/proto/stu3/BUILD
@@ -3,42 +3,7 @@ package(default_visibility = ["//visibility:public"])
 licenses(["notice"])
 
 proto_library(
-    name = "extensions",
-    srcs = [
-        "base64_separator_stride.proto",
-        "elementdefinition_binding_name.proto",
-        "primitive_has_no_value.proto",
-        "structuredefinition_explicit_type_name.proto",
-    ],
-    deps = [
-        ":annotations",
-        ":datatypes",
-    ],
-)
-
-java_proto_library(
-    name = "extensions_java_proto",
-    deps = [":extensions"],
-)
-
-proto_library(
-    name = "datatypes",
-    srcs = [
-        "codes.proto",
-        "datatypes.proto",
-    ],
-    deps = [
-        ":annotations",
-    ],
-)
-
-java_proto_library(
-    name = "datatypes_java_proto",
-    deps = [":datatypes"],
-)
-
-proto_library(
-    name = "annotations",
+    name = "annotations_proto",
     srcs = [
         "annotations.proto",
     ],
@@ -49,7 +14,74 @@ proto_library(
 
 java_proto_library(
     name = "annotations_java_proto",
-    deps = [":annotations"],
+    deps = [":annotations_proto"],
+)
+
+proto_library(
+    name = "codes_proto",
+    srcs = [
+        "codes.proto",
+    ],
+    deps = [
+        ":annotations_proto",
+        ":datatypes_proto",
+    ],
+)
+
+java_proto_library(
+    name = "codes_java_proto",
+    deps = [":codes_proto"],
+)
+
+proto_library(
+    name = "datatypes_proto",
+    srcs = [
+        "datatypes.proto",
+    ],
+    deps = [
+        ":annotations_proto",
+    ],
+)
+
+java_proto_library(
+    name = "datatypes_java_proto",
+    deps = [":datatypes_proto"],
+)
+
+proto_library(
+    name = "metadatatypes_proto",
+    srcs = [
+        "metadatatypes.proto",
+    ],
+    deps = [
+        ":annotations_proto",
+        ":codes_proto",
+        ":datatypes_proto",
+    ],
+)
+
+java_proto_library(
+    name = "metadatatypes_java_proto",
+    deps = [":metadatatypes_proto"],
+)
+
+proto_library(
+    name = "extensions_proto",
+    srcs = [
+        "base64_separator_stride.proto",
+        "elementdefinition_binding_name.proto",
+        "primitive_has_no_value.proto",
+        "structuredefinition_explicit_type_name.proto",
+    ],
+    deps = [
+        ":annotations_proto",
+        ":datatypes_proto",
+    ],
+)
+
+java_proto_library(
+    name = "extensions_java_proto",
+    deps = [":extensions_proto"],
 )
 
 proto_library(
@@ -58,8 +90,10 @@ proto_library(
         "resources.proto",
     ],
     deps = [
-        ":annotations",
-        ":datatypes",
+        ":annotations_proto",
+        ":codes_proto",
+        ":datatypes_proto",
+        ":metadatatypes_proto",
     ],
 )
 
