Add a utility to create .prototxt files from .json examples; use it in a script that generates the JsonFormatTest testdata files.

--- a/java/BUILD
+++ b/java/BUILD
@@ -20,42 +20,9 @@ java_library(
     ],
 )
 
-java_binary(
-    name = "FhirToProto",
-    srcs = [
-        "src/main/java/com/google/fhir/examples/FhirToProtoMain.java",
-    ],
-    main_class = "com.google.fhir.examples.FhirToProtoMain",
-    deps = [
-        ":stu3",
-        "//external:guava",
-        "//proto/stu3:resources_java_proto",
-        "@com_google_protobuf//:protobuf_java",
-        "@com_google_protobuf//:protobuf_java_util",
-    ],
-)
-
-java_binary(
-    name = "SplitBundle",
-    srcs = [
-        "src/main/java/com/google/fhir/examples/SplitBundleMain.java",
-    ],
-    main_class = "com.google.fhir.examples.SplitBundleMain",
-    deps = [
-        ":stu3",
-        "//external:guava",
-        "//proto/stu3:resources_java_proto",
-        "@com_google_protobuf//:protobuf_java",
-        "@com_google_protobuf//:protobuf_java_util",
-    ],
-)
-
-java_binary(
-    name = "ProtoGenerator",
-    srcs = [
-        "src/main/java/com/google/fhir/examples/ProtoGeneratorMain.java",
-    ],
-    main_class = "com.google.fhir.examples.ProtoGeneratorMain",
+java_library(
+    name = "examples",
+    srcs = glob(["src/main/java/com/google/fhir/examples/*.java"]),
     deps = [
         ":stu3",
         "//external:guava",
@@ -66,6 +33,30 @@ java_binary(
     ],
 )
 
+java_binary(
+    name = "ConvertNdJsonForBigQuery",
+    main_class = "com.google.fhir.examples.ConvertNdJsonForBigQueryMain",
+    runtime_deps = [":examples"],
+)
+
+java_binary(
+    name = "JsonToProto",
+    main_class = "com.google.fhir.examples.JsonToProtoMain",
+    runtime_deps = [":examples"],
+)
+
+java_binary(
+    name = "ProtoGenerator",
+    main_class = "com.google.fhir.examples.ProtoGeneratorMain",
+    runtime_deps = [":examples"],
+)
+
+java_binary(
+    name = "SplitBundle",
+    main_class = "com.google.fhir.examples.SplitBundleMain",
+    runtime_deps = [":examples"],
+)
+
 java_test(
     name = "AnnotationUtilsTest",
     size = "small",
@@ -73,8 +64,6 @@ java_test(
     test_class = "com.google.fhir.stu3.AnnotationUtilsTest",
     deps = [
         ":stu3",
-        "//external:junit",
-        "//external:truth",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:resources_java_proto",
         "@com_google_protobuf//:protobuf_java",
@@ -130,12 +119,12 @@ java_test(
     test_class = "com.google.fhir.stu3.ExtensionWrapperTest",
     deps = [
         ":stu3",
-        "//external:guava",
         "//external:junit",
         "//external:truth",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:extensions_java_proto",
         "@com_google_protobuf//:protobuf_java",
+        "@guava_maven//jar",
     ],
 )
 
@@ -162,12 +151,13 @@ java_test(
     test_class = "com.google.fhir.stu3.JsonFormatTest",
     deps = [
         ":stu3",
-        "//external:gson",
-        "//external:guava",
         "//external:junit",
         "//external:truth",
+        "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:resources_java_proto",
         "@com_google_protobuf//:protobuf_java",
+        "@gson_maven//jar",
+        "@guava_maven//jar",
     ],
 )
 
@@ -183,7 +173,6 @@ java_test(
     test_class = "com.google.fhir.stu3.ProtoFilePrinterTest",
     deps = [
         ":stu3",
-        "//external:guava",
         "//external:junit",
         "//external:truth",
         "//proto/stu3:annotations_java_proto",
@@ -192,6 +181,7 @@ java_test(
         "//proto/stu3:resources_java_proto",
         "@com_google_protobuf//:descriptor_proto",
         "@com_google_protobuf//:protobuf_java",
+        "@guava_maven//jar",
     ],
 )
 
@@ -206,7 +196,6 @@ java_test(
     test_class = "com.google.fhir.stu3.ProtoGeneratorTest",
     deps = [
         ":stu3",
-        "//external:guava",
         "//external:junit",
         "//external:truth",
         "//proto/stu3:annotations_java_proto",
@@ -214,6 +203,7 @@ java_test(
         "//proto/stu3:resources_java_proto",
         "@com_google_protobuf//:descriptor_proto",
         "@com_google_protobuf//:protobuf_java",
+        "@guava_maven//jar",
     ],
 )
 
@@ -240,10 +230,10 @@ java_test(
     test_class = "com.google.fhir.stu3.ValidationTest",
     deps = [
         ":stu3",
-        "//external:guava",
         "//external:junit",
         "//external:truth",
         "//proto/stu3:datatypes_java_proto",
         "@com_google_protobuf//:protobuf_java",
+        "@guava_maven//jar",
     ],
 )
