Add a BigQuery schema generator utility, and refactor the WORKSPACE java dependencies.

--- a/testdata/stu3/BUILD
+++ b/testdata/stu3/BUILD
@@ -4,6 +4,14 @@ package(default_visibility = ["//visibility:public"])
 
 licenses(["notice"])
 
+# These files are used to help test bigquery integration.
+filegroup(
+    name = "bigquery",
+    srcs = glob([
+        "bigquery/*.schema.json",
+    ]),
+)
+
 # These files are sample resources from the FHIR spec.
 filegroup(
     name = "examples",
