Use bazel Runfiles to point to testdata files.
PiperOrigin-RevId: 207981340

--- a/java/BUILD
+++ b/java/BUILD
@@ -91,6 +91,7 @@ java_test(
         "//external:guava",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:resources_java_proto",
+        "@bazel_tools//tools/runfiles:java-runfiles",
         "@com_google_apis_google_api_services_bigquery//jar",
         "@com_google_http_client_google_http_client//jar",
         "@com_google_http_client_google_http_client_gson//jar",
@@ -153,6 +154,7 @@ java_test(
         "//external:guava",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:extensions_java_proto",
+        "@bazel_tools//tools/runfiles:java-runfiles",
         "@com_google_protobuf//:protobuf_java",
         "@com_google_truth_truth//jar",
         "@junit_junit//jar",
@@ -185,6 +187,7 @@ java_test(
         "//external:gson",
         "//external:guava",
         "//proto/stu3:resources_java_proto",
+        "@bazel_tools//tools/runfiles:java-runfiles",
         "@com_google_protobuf//:protobuf_java",
         "@com_google_truth_truth//jar",
         "@junit_junit//jar",
@@ -209,6 +212,7 @@ java_test(
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:metadatatypes_java_proto",
         "//proto/stu3:resources_java_proto",
+        "@bazel_tools//tools/runfiles:java-runfiles",
         "@com_google_protobuf//:protobuf_java",
         "@com_google_truth_truth//jar",
         "@junit_junit//jar",
@@ -231,6 +235,7 @@ java_test(
         "//proto/stu3:annotations_java_proto",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:resources_java_proto",
+        "@bazel_tools//tools/runfiles:java-runfiles",
         "@com_google_protobuf//:protobuf_java",
         "@com_google_truth_truth//jar",
         "@junit_junit//jar",
@@ -262,6 +267,7 @@ java_test(
         ":stu3",
         "//external:guava",
         "//proto/stu3:datatypes_java_proto",
+        "@bazel_tools//tools/runfiles:java-runfiles",
         "@com_google_protobuf//:protobuf_java",
         "@com_google_truth_truth//jar",
         "@junit_junit//jar",
