--- a/cc/google/fhir/stu3/BUILD
+++ b/cc/google/fhir/stu3/BUILD
@@ -138,3 +138,36 @@ cc_library(
         "@com_google_protobuf//:protobuf",
     ],
 )
+
+cc_library(
+    name = "bundle_to_versioned_resources_converter",
+    srcs = ["bundle_to_versioned_resources_converter.cc"],
+    hdrs = ["bundle_to_versioned_resources_converter.h"],
+    strip_include_prefix = "//cc/",
+    deps = [
+        ":proto_util",
+        ":util",
+        "//cc/google/fhir/status",
+        "//cc/google/fhir/status:statusor",
+        "//proto/stu3:datatypes_cc_proto",
+        "//proto/stu3:resources_cc_proto",
+        "//proto/stu3:version_config_cc_proto",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/time",
+        "@com_google_protobuf//:protobuf",
+        "@org_tensorflow//tensorflow/core:lib",
+    ],
+)
+
+cc_test(
+    name = "bundle_to_versioned_resources_converter_test",
+    srcs = ["bundle_to_versioned_resources_converter_test.cc"],
+    data = ["//proto/stu3:version_config.textproto"],
+    deps = [
+        ":bundle_to_versioned_resources_converter",
+        "//cc/google/fhir/testutil:proto_matchers",
+        "@com_google_googletest//:gtest_main",
+        "@com_google_protobuf//:protobuf",
+        "@org_tensorflow//tensorflow/core:lib",
+    ],
+)
