Switch the default run_time for python and c++ proto libraries to use protobuf_archive@, to match with what @org_tensorflow is using.
PiperOrigin-RevId: 211868973

--- a/cc/google/fhir/testutil/BUILD
+++ b/cc/google/fhir/testutil/BUILD
@@ -10,6 +10,6 @@ cc_library(
     strip_include_prefix = "//cc/",
     deps = [
         "@com_google_googletest//:gtest",
-        "@com_google_protobuf//:protobuf",
+        "@protobuf_archive//:protobuf",
     ],
 )
